[gd_scene load_steps=4 format=3 uid="uid://drvf0jrx872j0"]

[ext_resource type="Script" path="res://board.gd" id="1_hqhoe"]
[ext_resource type="Script" path="res://game.gd" id="1_ms3vy"]
[ext_resource type="PackedScene" uid="uid://c5yuvkvhxg37v" path="res://tile.tscn" id="1_oexni"]

[node name="SceneManager" type="Node"]

[node name="Game" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ms3vy")

[node name="Board" type="Node2D" parent="Game"]
position = Vector2(116, 123)
script = ExtResource("1_hqhoe")

[node name="Tile11" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(40, 40)

[node name="Tile12" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(110, 40)

[node name="Tile13" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(180, 40)

[node name="Tile21" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(40, 110)

[node name="Tile22" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(110, 110)

[node name="Tile23" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(180, 110)

[node name="Tile31" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(40, 180)

[node name="Tile32" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(110, 180)

[node name="Tile33" parent="Game/Board" instance=ExtResource("1_oexni")]
position = Vector2(180, 180)
